--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SuperAvalon Payment Library",
     "type": "library",
     "require": {
-        "php": "~7.1.0",
+        "php": "^7.1.0",
         "laravel/framework": "~5.8.0"
     },
     "license": "MIT",
